# instagram-clone

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .graphqlrc.yaml  CLAUDE.md  Cargo.toml  LICENSE  LICENSE.md  Makefile  README.md  TODOS.md  Taskfile.yaml  act.secrets.env  act.secrets.example.env  architecture.drawio  buf.gen.yaml  buf.yaml  build.rs  bunfig.toml  compose.yaml  cosign.key  cosign.pub  devspace.yaml  flake.nix  go.work  go.work.sum  graphql-codegen.ts  high-level.architecture.drawio  makefile  nx.json  oxlint.config.ts  package.json  prometheus.dev-config.yaml  rust-toolchain.toml  rustfmt.toml  skills-lock.json  sqlc.yaml  trivy.yaml  tsconfig.base.json  (+1 more)
.claude/: settings.json
.claude/skills/: apollo-client  apollo-federation  apollo-server  graphql-schema
.github/: dependabot.yml
.github/workflows/: build-and-push-containers.yaml  build-push-and-update-container-images.yaml  main.yaml
Architecture/: architecture.drawio
Backend/AuthenticationMicroservice/: go.mod
Backend/AuthenticationMicrosevice/: Cargo.toml
architecture/: architecture.drawio  backend.architecture.drawio  cicd.architecture.drawio
backend/: .clang-format  .dockerignore  .gitignore  .oxfmtrc.json  .swcrc  Cargo.toml  Dockerfile  README.md  buf.gen.yaml  buf.yaml  bunfig.toml  compose.yaml  go.work  go.work.sum  lib.rs  nest-cli.json  package.json  project.json  rspack.config.js  rust-toolchain.toml  tsconfig.app.json  tsconfig.json  vitest.config.e2e.ts  vitest.config.mts  vitest.config.ts  webpack-hmr.config.js  webpack.config.js
backend/debezium/: example.source-connector.jsonc  posts-db.source-connector.json
backend/flink/: .gitattributes  .gitignore  build.gradle  gradlew  gradlew.bat  settings.gradle
backend/fluentd/: Dockerfile  fluent.conf
backend/gateway/: .env  Cargo.toml  Dockerfile  authentication_middleware.go  go.mod  go.sum  gqlgen.yaml  init_tracer.go  main.go  project.json  rspack.config.js  rust-toolchain.toml  rustfmt.toml  schema.graphql  tsconfig.app.json
backend/hack/: seed.sql
backend/microservices/: sqlc.yaml
backend/outboxer/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go  main_test.go
backend/proto/: authentication.proto  events.proto  go.mod  go.sum  rabbitmq-events.proto
backend/protos/: feeds_microservice.proto  followships_microservice.proto  posts_microservice.proto  profiles_microservice.proto  users_microservice.proto
backend/shared/: go.mod  go.sum
backend/sql/: mod.rs  schema.sql
backend/src/: main.ts
cloud/: .terraform.lock.hcl  1.cluster.tf  2.cilium.tf  3.prepare-cluster.tf  4.vcluster.tf  main.tf  others.tf  vcluster.values.yaml
compose/: compose.yaml  dashboards.compose.yaml  migrations.compose.yaml  observability.compose.yaml  tools.compose.yaml
compose/configs/: prometheus.yaml  redpanda.yaml  vector.yaml
compose/scripts/: create-debezium-connectors.sh
deploy/cue.mod/: module.cue
docs/style-guides/: microservice.md
frontend/: .prettierrc  Dockerfile  biome.json  bun.lockb  codegen.yaml  doc.ts  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts  todos.md  tsconfig.json
frontend/app/: get-feed.action.ts  layout.tsx  page.tsx  providers.component.tsx
frontend/components/: authentication-guard.component.tsx  form-field.component.tsx
frontend/graphql/: follow.mutation.graphql  get-feed.query.graphql  get-followers.query.graphql  get-followings.query.graphql  get-posts-of-user.query.graphql  get-profile.query.graphql  search-profiles.query.graphql  signin.query.graphql  signup.mutation.graphql  unfollow.mutation.graphql
frontend/lib/: apollo-client.ts  utils.ts
frontend/store/: store.ts
kubernetes/: README.md  certificate-signing-request.template.yaml  chartfile.yaml  install-pre-requisites.sh  jsonnetfile.json  jsonnetfile.lock.json
kubernetes/base/: application-controller.yaml  autometrics.yaml  bitnami-sealed-secrets.yaml  git-credentials.sealed-secret.yaml  git-credentials.secret.yaml  kustomization.yaml
kubernetes/lib/: apps.libsonnet  argocd.libsonnet  aws.libsonnet  cert-manager.libsonnet  cilium.libsonnet  external-dns.libsonnet  external-secrets.libsonnet  gateway-api.libsonnet  kube-prometheus.libsonnet  tetragon.libsonnet  utils.libsonnet  (+1 more)
lib/: package.json  project.json  tsconfig.lib.json  vitest.config.mts
scripts/: create-debezium-connectors.sh  generate-sealed-secrets.sh  metrics-instrument-graphql-resolvers.sh  operator-codegen.sh  redpanda-migrate.sh
terragrunt/: root.terragrunt.hcl
tools/graphway/: Cargo.toml
tools/graphway/src/: main.rs
tools/graphway/src/config/: mod.rs
tools/graphway/src/graphql/: types.rs
tools/graphway/src/loaders/: mod.rs
tools/graphway/src/loaders/grpc/: mod.rs
tools/graphway/src/loaders/grpc/test/: users.proto
(+777 files in other folders)
