[package]
name = "instagram-clone"
version = "0.1.0"
edition = "2021"

[lib]
name= "shared"
path= "backend/lib.rs"

[[bin]]
name= "users-microservice"
path= "backend/microservices/users/main.rs"

[[bin]]
name= "profiles-microservice"
path= "backend/microservices/profiles/main.rs"

[[bin]]
name= "followships-microservice"
path= "backend/microservices/followships/main.rs"

[[bin]]
name= "posts-microservice"
path= "backend/microservices/posts/main.rs"

[[bin]]
name= "feeds-microservice"
path= "backend/microservices/feeds/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.78"
argon2 = "0.5.2"
async-trait = "0.1.76"
autometrics = { version = "1.0.0", features = ["prometheus-exporter"] }
axum = { version = "0.6", features = ["http2"], default-features = false }
chrono = "0.4.31"
cornucopia_async = "0.4.0"
deadpool-postgres = "0.10.0"
derive_more = { version = "0.99.17", default-features = false, features = ["constructor"] }
dotenv = "0.15.0"
elasticsearch = { version = "8.5.0-alpha.1", default-features = false }
futures = "0.3.30"
jsonwebtoken = "9.2.0"
kafka = { version = "0.10.0", default-features = false }
lazy_static = "1.4.0"
opentelemetry = { version = "0.21.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.14.0", default-features = false, features = ["gzip-tonic", "trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.21.2", features = ["rt-tokio"] }
postgres-types = { version = "0.2.6", features = ["with-time-0_3"] }
prost = "0.12.3"
r2d2_redis = "0.14.0"
redis = { version = "0.24.0", features = ["tokio-comp", "r2d2"] }
serde = "1.0.193"
serde_json = "1.0.108"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-postgres = "0.7.10"
tokio-util = "0.7.10"
tonic = { version = "0.10.2", features = ["gzip"] }
tonic-reflection = "0.10.2"
tower = "0.4.13"
tower-http = { version = "0.4", features = ["trace"] }
tracing = { version = "0.1.40", default-features = false }
tracing-opentelemetry = { version = "0.22.0", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "env-filter"] }
warp = "0.3.6"

[build-dependencies]
tonic-build = "0.10.2"
