[workspace]
resolver = "3"
members = ["tools/graphway"]

[workspace.dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["constructor"] }
graphql-parser = "0.4.1"
lazy_static = "1.5.0"
prost = "0.13.4"
prost-types = "0.13.4"
prost-build = "0.13.4"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_yaml = "0.9.34"
stringcase = "0.3.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.12.3"
tracing = "0.1.41"
