[package]
name = "graphway"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "graphway"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
graphql-parser = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
stringcase.workspace = true
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
